# gunter

./: .gitignore  README.md  pyproject.toml
src/: pyproject.toml
src/app/: routes.py
src/app/templates/: index.html
src/model/: predict.py  preprocess.py  train.py
src/src/: works1.py  works2.py
