[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["mattia allegro <mattia.allegro@yahoo.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "24.4.2"
tensorflow = "^2.16.2"
scikit-learn = "^1.5.0"
flask = "^3.0.3"
transformers = "^4.42.3"
matplotlib = "^3.9.1"
nltk = "^3.8.1"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
