[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["mattia allegro <mattia.allegro@yahoo.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
nltk = "3.8.1"
numpy = "1.26.4"
tensorflow = "2.16.1"
black = "24.4.2"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
